<resources>
    <string name="app_name">OjolApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="nama_">Nama :</string>
    <string name="dean">dean</string>
    <string name="email_">Email :</string>
    <string name="email_anda">email anda</string>
    <string name="notelp_">No Telp :</string>
    <string name="no_hp">nomor telepon</string>
    <string name="cileungsi_bogor">Cileungsi Bogor</string>
    <string name="dari_mana">dari mana?</string>
    <string name="mau_kemana">mau kemana?</string>
    <string name="harga">harga</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="estimasi_waktu">estimasi waktu</string>
    <string name="_3_menit">3 menit</string>
    <string name="pesan">Pesan</string>
    <string name="tunggu_driver_yang_ambil_ya">Tunggu Driver yang ambil ya...</string>
    <string name="nama_driver">nama driver</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="_hp">No. Hp</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_account_sign_up">Dont have account? Sign Up</string>
    <string name="or">or</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="input_nomer_telepon">Input Nomor Telepon</string>
    <string name="submit">Submit</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
</resources>