<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp"/>


    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/nama"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background" />

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"/>

    <EditText
        android:id="@+id/et_signup_hp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/_hp"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background" />

    <EditText
        android:id="@+id/et_signup_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background" />

    <EditText
        android:id="@+id/et_signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:background="@drawable/background" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/background2"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"/>

</LinearLayout>